# sysloggerl

./: .gitignore  .travis.yml  AUTHORS  COPYING  COPYRIGHT  ChangeLog  Makefile.am  README.md  configure.ac  include.mk  vsn.mk
debian/: changelog  control  copyright  rules
doc/: syslog.md  syslog_wrapper.md  sysloggerl_app.md
ebin/: Makefile.am  syslogger.app.in  syslogger.app.in.in  syslogger.appup.in
include/: Makefile.am  sysloggerl.hrl
priv/: Makefile.am  sys.config
src/: Emakefile.in  Emakefile.in.in  Makefile.am  error_logger_syslog.erl  syslog.erl  syslog_wrapper.erl  syslogger.app.src  syslogger.appup.src  syslogger.erl  syslogger_app.erl  syslogger_sup.erl  sysloggerl.app.src  sysloggerl_app.erl  sysloggerl_sup.erl
testsuite/: Makefile.am  analyze_coverdata.escript.in  basic_SUITE.erl  cover_to_html.sh.in  dialyzer.in  etest.in  run_common_test.in  syslog_SUITE.erl  syslog_wrapper_SUITE.erl  testsuite.hrl
