# $Id$

ACLOCAL_FLAGS = -I m4
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src ebin testsuite priv

EXTRA_DIST = SVNREV							\
	     debian/changelog						\
	     debian/compat						\
	     debian/control						\
	     debian/copyright						\
	     debian/rules

distdir = $(PACKAGE)-$(VERSION)$(APP_DISTSUFFIX)
